--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,12 @@
 @media screen and (max-width: 578px) {
     .carousel-item img {
-        min-height: 500px;
+        min-height: 400px;
+    }
+    .carousel-item p, .carousel-item button {
+        font-size: 16px !important;
+    }
+    img.custom-width {
+        width: 100%;
+        max-height: 200px;
     }
 }
